--- a/fuentes/visuales/grado08/guion05/guionAbierto/CS_08_05_CO_Recurso080/motor/manifest.json
+++ b/fuentes/visuales/grado08/guion05/guionAbierto/CS_08_05_CO_Recurso080/motor/manifest.json
@@ -78,7 +78,51 @@
                 },
                 {
                     "from": "module",
-                    "file": "motor/js/M5ball_min.js"
+                    "file": "motor/js/utils.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/scorm.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/richText.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/controlsContenedor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/controlsMotor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/contenedor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/datosXML.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/motor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/DOMElementCustom.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/lang.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/playerSettings.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/main.js"
                 }
             ]
         },
