--- a/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso290/motor/manifest.json
+++ b/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso290/motor/manifest.json
@@ -58,7 +58,47 @@
                 },
                 {
                     "from": "module",
-                    "file": "motor/js/M8aall_min.js"
+                    "file": "motor/js/utils.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/scorm.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/richText.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/controlsContenedor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/controlsMotor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/contenedor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/datosXML.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/motor.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/DOMElementCustom.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/lang.js"
+                },
+                {
+                    "from": "module",
+                    "file": "motor/js/main.js"
                 }
             ]
         },
